--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -73,7 +73,7 @@ jobs:
         id: build-and-push-run_stage
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
-          context: .
+          # context: .
           dockerfile: run_stage.Dockerfile
           repository: python_run_stage
           push: ${{ github.event_name != 'pull_request' }}
@@ -101,7 +101,7 @@ jobs:
         id: build-and-push-build_stage
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
-          context: .
+          # context: .
           dockerfile: build_stage.Dockerfile
           repository: python_build_stage
           push: ${{ github.event_name != 'pull_request' }}
@@ -114,7 +114,7 @@ jobs:
         id: build-and-push-prompteng_run_stage
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
-          context: .
+          # context: .
           dockerfile: prompteng_run_stage.Dockerfile
           repository: prompteng_run_stage
           push: ${{ github.event_name != 'pull_request' }}
