--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -64,7 +64,7 @@ jobs:
         id: tag_name
         run: |
           if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            echo "::set-output name=tag::${{ github.ref#refs/tags/ }}"
+            echo "::set-output name=tag::${GITHUB_REF/refs\/tags\//}"
           else
             echo "::set-output name=tag::$(echo "${{ github.sha }}" | cut -c1-8)"
           fi
