--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           context: ./run_stage
           push: ${{ github.event_name != 'pull_request' }}
-          tags: "ghcr.io/sellpath/python_run_stage:${{ steps.tag_name.outputs.tag }}"
+          tags: "${{ env.REGISTRY }}/sellpath/python_run_stage:${{ steps.tag_name.outputs.tag }}"
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -88,7 +88,7 @@ jobs:
         with:
           context: build_stage/
           push: ${{ github.event_name != 'pull_request' }}
-          tags: "ghcr.io/sellpath/python_build_stage:${{ steps.tag_name.outputs.tag }}"
+          tags: "${{ env.REGISTRY }}/sellpath/python_build_stage:${{ steps.tag_name.outputs.tag }}"
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -99,7 +99,7 @@ jobs:
         with:
           context: ./prompteng_run_stage
           push: ${{ github.event_name != 'pull_request' }}
-          tags: "ghcr.io/sellpath/prompteng_run_stage:${{ steps.tag_name.outputs.tag }}"
+          tags: "${{ env.REGISTRY }}/sellpath/prompteng_run_stage:${{ steps.tag_name.outputs.tag }}"
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
