--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,7 +21,6 @@ env:
   IMAGE_NAME: ${{ github.repository }}
   TAG_NAME: ""
 
-
 jobs:
   build:
 
@@ -105,3 +104,24 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
   
+      - name: ui_run_stage_amd64.Dockerfile- Build and push Docker image 
+        id: build-and-push-ui_run_stage
+        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+        with:
+          context: ./ui_run_stage_amd64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/ui_run_stage:${{ steps.tag_name.outputs.tag }}"
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      # - name: ui_run_stage_arm64v8.Dockerfile- Build and push Docker image 
+      #   id: build-and-push-ui_run_stage_arm64
+      #   uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+      #   with:
+      #     context: ./ui_run_stage_arm64v8
+      #     push: ${{ github.event_name != 'pull_request' }}
+      #     tags: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/ui_run_stage_arm64v8:${{ steps.tag_name.outputs.tag }}"
+      #     labels: ${{ steps.meta.outputs.labels }}
+      #     cache-from: type=gha
+      #     cache-to: type=gha,mode=max
