--- a/.github/workflows/docker-publish-dockerio.yml
+++ b/.github/workflows/docker-publish-dockerio.yml
@@ -7,11 +7,11 @@ name: Docker
 
 on:
   push:
-    branches: [ "dockerio" ]
+    branches: [ "main" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ "dockerio" ]
+    branches: [ "main" ]
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -20,7 +20,6 @@ env:
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
   TAG_NAME: ""
-
 
 jobs:
   build:
@@ -94,6 +93,39 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - name: ui_run_stage_amd64.Dockerfile- Build and push Docker image 
+        id: build-and-push-ui_run_stage
+        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+        with:
+          context: ./ui_run_stage_amd64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/ui_run_stage:${{ steps.tag_name.outputs.tag }}"
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      # - name: ui_run_stage_arm64v8.Dockerfile- Build and push Docker image 
+      #   id: build-and-push-ui_run_stage_arm64
+      #   uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+      #   with:
+      #     context: ./ui_run_stage_arm64v8
+      #     push: ${{ github.event_name != 'pull_request' }}
+      #     tags: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/ui_run_stage_arm64v8:${{ steps.tag_name.outputs.tag }}"
+      #     labels: ${{ steps.meta.outputs.labels }}
+      #     cache-from: type=gha
+      #     cache-to: type=gha,mode=max
+
+      - name: postgres - Build and push Docker image 
+        id: build-and-push-postgres
+        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+        with:
+          context: ./postgres
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/postgres:${{ steps.tag_name.outputs.tag }}"
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+  
       - name: prompteng_run_stage.Dockerfile- Build and push Docker image 
         id: build-and-push-prompteng_run_stage
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
@@ -105,15 +137,3 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
   
-      - name: ui_run_stage.Dockerfile- Build and push Docker image 
-        id: build-and-push-ui_run_stage
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
-        with:
-          context: ./ui_run_stage
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/ui_run_stage:${{ steps.tag_name.outputs.tag }}"
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-
