update when to build

--- a/.github/workflows/docker-publish-dockerio.yml
+++ b/.github/workflows/docker-publish-dockerio.yml
@@ -9,7 +9,7 @@ on:
   push:
     branches: [ "dockerio" ]
     # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
+    # tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ "dockerio" ]
 
