--- a/run_stage/Dockerfile
+++ b/run_stage/Dockerfile
@@ -1,13 +1,13 @@
 # Python 'run' stage
-FROM python:3.11.9-slim-bookworm  as python-run-stage
+FROM python:3.11.12-slim-bookworm  AS python-run-stage
 
 ARG BUILD_ENVIRONMENT=local
 ARG APP_HOME=/app
 ARG APP_SRC=./app-src
 
-ENV PYTHONUNBUFFERED 1
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV BUILD_ENV ${BUILD_ENVIRONMENT}
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV BUILD_ENV=${BUILD_ENVIRONMENT}
 
 WORKDIR ${APP_HOME}
 
