--- a/run_stage/Dockerfile
+++ b/run_stage/Dockerfile
@@ -1,5 +1,5 @@
 # Python 'run' stage
-FROM python:3.11.12-slim-bookworm  AS python-run-stage
+FROM python:3.11.13-slim-bookworm  AS python-run-stage
 
 ARG BUILD_ENVIRONMENT=local
 ARG APP_HOME=/app
@@ -42,3 +42,5 @@ RUN groupadd -g 1000 dev-user \
   && usermod -aG docker dev-user 
 
 RUN /usr/local/bin/python -m pip install --upgrade pip setuptools wheel
+COPY requirements/base.txt /tmp/base.txt
+RUN /usr/local/bin/python -m pip install -r /tmp/base.txt && rm -f /tmp/base.txt 
