--- a/run_stage/requirements/sessionmgr/requirements.txt
+++ b/run_stage/requirements/sessionmgr/requirements.txt
@@ -31,7 +31,7 @@ prometheus_client==0.21.1
 # parler_tts @ git+https://github.com/sellpath/parler-tts.git
 psycopg==3.2.9
 psycopg-c==3.2.9
-psycopg2==2.9.10 
+psycopg2-binary==2.9.10 
 pydantic==2.11.5
 pydub==0.25.1
 # pyee>=11.1.1
