--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,5 +1,7 @@
 FROM postgres:17.5-bookworm
 
+COPY base_image_version.txt /base_image_version.txt
+
 # Install dependencies and pgvector extension
 RUN apt-get update && apt-get install -y \
     git \
