--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -66,6 +66,25 @@ jobs:
           else
             echo "tag=$(echo "${{ github.sha }}" | cut -c1-8)" >> $GITHUB_ENV
           fi
+
+      - name: Write base image version info
+        run: |
+          BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            echo "tag: ${GITHUB_REF/refs\/tags\//}, sha: ${{ github.sha }}" > base_image_version.txt
+          else
+            echo "sha: ${{ github.sha }}" > base_image_version.txt
+          fi
+          echo "build_date: $BUILD_DATE" >> base_image_version.txt
+          echo "runner_os: ${{ runner.os }}" >> base_image_version.txt
+          echo "runner_name: ${{ runner.name }}" >> base_image_version.txt
+          echo "runner_arch: ${{ runner.arch }}" >> base_image_version.txt
+
+      - name: Copy base_image_version.txt to all build contexts
+        run: |
+          for dir in postgres run_stage build_stage ui_run_stage; do
+            cp base_image_version.txt "$dir/base_image_version.txt"
+          done
   
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
@@ -81,6 +100,14 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - name: Scan python_run_stage image for vulnerabilities with Trivy
+        uses: aquasecurity/trivy-action@v0.16.0
+        with:
+          image-ref: ghcr.io/sellpath/python_run_stage:${{ env.tag }}
+          format: table
+          exit-code: 1
+          severity: HIGH,CRITICAL
+
       - name: build_stage.Dockerfile - Build and push Docker image 
         id: build-and-push-build_stage
         uses: docker/build-push-action@v5 # v5.0.0
@@ -93,6 +120,14 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - name: Scan python_build_stage image for vulnerabilities with Trivy
+        uses: aquasecurity/trivy-action@v0.16.0
+        with:
+          image-ref: ghcr.io/sellpath/python_build_stage:${{ env.tag }}
+          format: table
+          exit-code: 1
+          severity: HIGH,CRITICAL
+
       - name: ui_run_stage.Dockerfile - Build and push Docker image 
         id: build-and-push-ui_run_stage
         uses: docker/build-push-action@v5 # v5.0.0
@@ -104,6 +139,14 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Scan ui_run_stage image for vulnerabilities with Trivy
+        uses: aquasecurity/trivy-action@v0.16.0
+        with:
+          image-ref: ghcr.io/sellpath/ui_run_stage:${{ env.tag }}
+          format: table
+          exit-code: 1
+          severity: HIGH,CRITICAL
 
       # - name: ui_run_stage_arm64v8.Dockerfile- Build and push Docker image 
       #   id: build-and-push-ui_run_stage_arm64
@@ -127,3 +170,11 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Scan postgres image for vulnerabilities with Trivy
+        uses: aquasecurity/trivy-action@v0.16.0
+        with:
+          image-ref: ghcr.io/sellpath/postgres:${{ env.tag }}
+          format: table
+          exit-code: 1
+          severity: HIGH,CRITICAL
